Migrate dd-flasher to a Rust helper
Replace the Java dd-flasher module with a Rust helper binary and adapt the SDK flash service to invoke it through a process-backed writer while preserving progress reporting and test injection.

Assisted-by: codex:gpt-5.5